--- a/homepage.html
+++ b/homepage.html
@@ -3,34 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dispensary Management System</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="container">
-        <div class ="top">
-            <h1>DMS</h1>
-            <H2>DISPENSARY MANAGEMENT SYSTEM</H2>
-        </div>
-        <div class="body">
-            <form action="">
-                <div>
-                    <label for ="">Username</label>
-                    <input type="text"  />
-                    </div>
-                    <div>
-                        <label for ="">Password</label>
-                        <input type="password"  />
-
-                    </div>
-                    <div>
-                        <button>login</button>
-                    </div>
-                </div>
-            </form>
-
-        </div>
-
-    </div>
+   
 </body>
 </html>
