--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
-<body>
-   
+<body id>
+   <div class ="header">
+
+   </div>
+   <div class ="banner">
+    <div class = "homepagecontainer">
+        <h1>asdf</h1>
+
+    </div>
+
+   </div>
 </body>
 </html>
