--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,11 @@
    </div>
    <div class ="banner">
     <div class = "homepagecontainer">
-        <h1>asdf</h1>
+        <div class = bannerheader >
+            <h1>DMS</h1>
+            <p>DISPENSARY MANAGEMENT SYSTEM</p>
+        </div class = bannertagline>
+        <P>HI HELLO HOW ARE YOU ARE YOU FINE</P>
 
     </div>
 
