--- a/homepage.html
+++ b/homepage.html
@@ -6,8 +6,13 @@
     <title>Home page</title>
     <link rel="stylesheet" href="css/homepage.css">
 </head>
-<body id>
+<body >
    <div class ="header">
+    
+
+    
+    <a href="login.html">Login</a>
+
 
    </div>
    <div class ="banner">
@@ -19,6 +24,9 @@
         <P>HI HELLO HOW ARE YOU ARE YOU FINE</P>
 
     </div>
+
+   </div>
+   <div>
 
    </div>
 </body>
