--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/dasboard.css">
+    <script src="https://use.fontawesome.com/0c7a3095b5.js"></script>
 </head>
 <body>
     <div>
@@ -16,10 +17,29 @@
 
             </div>
             <div class ="dashboard_sidebar_menus">
+                <ul class="dashboard_menu_lists">
+                    <li>
+                        <a href=""><i class="fa fa-dashboard"></i>Dashboard</a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa fa-dashboard"></i>Dashboard</a>
+                    </li>
+
+                </ul>
 
             </div>
         </div>
-        <div class = "dashboard_content">
+        <div class = "dashboard_content_container">
+            <div class=""dashboard_content_topNav>
+                
+                <a href="" ><i class="fa fa-navicon"></i></a>
+                <a href="" ><i class="fa fa-power-off"></i>Log-out</a>
+            </div>
+            <div class="dashboard_content">
+                <div class="dashboard_content_main">
+                    
+                </div>
+            </div>
 
         </div>
     </div>
