--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
     <script src="https://use.fontawesome.com/0c7a3095b5.js"></script>
 </head>
 <body>
-    <div>
+    <div class="dashboardMainContainer">
         <div class="dashboard_sidebar">
             <h3 class = "dashboard_logo">DMS</h3>
             <div class ="dashboard_sidebar_user">
