--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
         <div class="dashboard_sidebar">
             <h3 class = "dashboard_logo">DMS</h3>
             <div class ="dashboard_sidebar_user">
-                <img src="" alt="user image">
+                <img src="/images/user/dms.jpg" alt="user image"/>
                 <span >User</span>
 
             </div>
