--- a/dashboard.html
+++ b/dashboard.html
@@ -18,8 +18,8 @@
             </div>
             <div class ="dashboard_sidebar_menus">
                 <ul class="dashboard_menu_lists">
-                    <li>
-                        <a href=""><i class="fa fa-dashboard"></i>Dashboard</a>
+                    <li class="menuactive">
+                        <a href="" ><i class="fa fa-dashboard"></i>Dashboard</a>
                     </li>
                     <li>
                         <a href=""><i class="fa fa-dashboard"></i>Dashboard</a>
@@ -30,10 +30,10 @@
             </div>
         </div>
         <div class = "dashboard_content_container">
-            <div class=""dashboard_content_topNav>
+            <div class="dashboard_content_topNav">
                 
                 <a href="" ><i class="fa fa-navicon"></i></a>
-                <a href="" ><i class="fa fa-power-off"></i>Log-out</a>
+                <a href="" id="logoutButton"><i class="fa fa-power-off"></i>Log-out</a>
             </div>
             <div class="dashboard_content">
                 <div class="dashboard_content_main">
