added javascript file

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,7 @@
         <div class = "dashboard_content_container">
             <div class="dashboard_content_topNav">
                 
-                <a href="" ><i class="fa fa-navicon"></i></a>
+                <a href="" id="togglebutton"><i class="fa fa-navicon"></i></a>
                 <a href="" id="logoutButton"><i class="fa fa-power-off"></i>Log-out</a>
             </div>
             <div class="dashboard_content">
@@ -43,6 +43,7 @@
 
         </div>
     </div>
+    <script src="/js/dashboard.js"></script>
     
 </body>
 </html>
