--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="dashboardMainContainer">
-        <div class="dashboard_sidebar">
+        <div class="dashboard_sidebar" id ="dashboard_sidebar">
             <h3 class = "dashboard_logo">DMS</h3>
             <div class ="dashboard_sidebar_user">
                 <img src="/images/user/dms.jpg" alt="user image"/>
@@ -17,7 +17,7 @@
 
             </div>
             <div class ="dashboard_sidebar_menus">
-                <ul class="dashboard_menu_lists">
+                <ul class="dashboard_menu_lists" >
                     <li class="menuactive">
                         <a href="" ><i class="fa fa-dashboard"></i>Dashboard</a>
                     </li>
