--- a/dashboard.html
+++ b/dashboard.html
@@ -8,11 +8,11 @@
     <script src="https://use.fontawesome.com/0c7a3095b5.js"></script>
 </head>
 <body>
-    <div class="dashboardMainContainer">
+    <div class="dashboardMainContainer" id="dashboardMainContainer">
         <div class="dashboard_sidebar" id ="dashboard_sidebar">
-            <h3 class = "dashboard_logo">DMS</h3>
+            <h3 class = "dashboard_logo" id="dashboard_logo">DMS</h3>
             <div class ="dashboard_sidebar_user">
-                <img src="/images/user/dms.jpg" alt="user image"/>
+                <img src="/images/user/dms.jpg" alt="user image" id="userimage"/>
                 <span >User</span>
 
             </div>
@@ -29,7 +29,7 @@
 
             </div>
         </div>
-        <div class = "dashboard_content_container">
+        <div class = "dashboard_content_container" id="dashboard_content_container">
             <div class="dashboard_content_topNav">
                 
                 <a href="" id="togglebutton"><i class="fa fa-navicon"></i></a>
