--- a/dashboard.html
+++ b/dashboard.html
@@ -19,10 +19,10 @@
             <div class ="dashboard_sidebar_menus">
                 <ul class="dashboard_menu_lists" >
                     <li class="menuactive">
-                        <a href="" ><i class="fa fa-dashboard"></i>Dashboard</a>
+                        <a href="" ><i class="fa fa-dashboard "></i><span class="menutext">Dashboard</span></a>
                     </li>
                     <li>
-                        <a href=""><i class="fa fa-dashboard"></i>Dashboard</a>
+                        <a href=""><i class="fa fa-dashboard "></i><span class="menutext">Dashboard</span></a>
                     </li>
 
                 </ul>
